--- a/app.ipynb
+++ b/app.ipynb
@@ -2,360 +2,171 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#problem statement:\n",
-    "#scope: combine location wise bedplaces and percentage of individuals and get location wise bedplaces per individual\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
-    "# Read the CSV file into a pandas DataFrame\n",
-    "# location wise bedplaces etc data\n",
-    "df = pd.read_csv('data/estat_tour_cap_nat_en.csv')\n",
-    "\n",
-    "#location wise percentage of individuals\n",
-    "df_2 = pd.read_csv('data/estat_isoc_ci_dev_i_en.csv')"
+    "# Load the dataset\n",
+    "geo_device = pd.read_csv(\"input_data/estat_isoc_ci_dev_i_en.csv\")\n",
+    "geo_beds = pd.read_csv(\"input_data/estat_tour_cap_nat_en.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATAFLOW</th>\n",
-       "      <th>LAST UPDATE</th>\n",
-       "      <th>freq</th>\n",
-       "      <th>accomunit</th>\n",
-       "      <th>unit</th>\n",
-       "      <th>nace_r2</th>\n",
-       "      <th>geo</th>\n",
-       "      <th>TIME_PERIOD</th>\n",
-       "      <th>OBS_VALUE</th>\n",
-       "      <th>OBS_FLAG</th>\n",
-       "      <th>CONF_STATUS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ESTAT:TOUR_CAP_NAT(1.0)</td>\n",
-       "      <td>10/04/25 23:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>BEDPL</td>\n",
-       "      <td>NR</td>\n",
-       "      <td>I551</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>650559.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ESTAT:TOUR_CAP_NAT(1.0)</td>\n",
-       "      <td>10/04/25 23:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>BEDPL</td>\n",
-       "      <td>NR</td>\n",
-       "      <td>I551</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>654127.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ESTAT:TOUR_CAP_NAT(1.0)</td>\n",
-       "      <td>10/04/25 23:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>BEDPL</td>\n",
-       "      <td>NR</td>\n",
-       "      <td>I551</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>653586.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ESTAT:TOUR_CAP_NAT(1.0)</td>\n",
-       "      <td>10/04/25 23:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>BEDPL</td>\n",
-       "      <td>NR</td>\n",
-       "      <td>I551</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>651003.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ESTAT:TOUR_CAP_NAT(1.0)</td>\n",
-       "      <td>10/04/25 23:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>BEDPL</td>\n",
-       "      <td>NR</td>\n",
-       "      <td>I551</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>650020.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  DATAFLOW        LAST UPDATE freq accomunit unit nace_r2 geo  \\\n",
-       "0  ESTAT:TOUR_CAP_NAT(1.0)  10/04/25 23:00:00    A     BEDPL   NR    I551  AT   \n",
-       "1  ESTAT:TOUR_CAP_NAT(1.0)  10/04/25 23:00:00    A     BEDPL   NR    I551  AT   \n",
-       "2  ESTAT:TOUR_CAP_NAT(1.0)  10/04/25 23:00:00    A     BEDPL   NR    I551  AT   \n",
-       "3  ESTAT:TOUR_CAP_NAT(1.0)  10/04/25 23:00:00    A     BEDPL   NR    I551  AT   \n",
-       "4  ESTAT:TOUR_CAP_NAT(1.0)  10/04/25 23:00:00    A     BEDPL   NR    I551  AT   \n",
-       "\n",
-       "   TIME_PERIOD  OBS_VALUE OBS_FLAG CONF_STATUS  \n",
-       "0         1990   650559.0      NaN         NaN  \n",
-       "1         1991   654127.0      NaN         NaN  \n",
-       "2         1992   653586.0      NaN         NaN  \n",
-       "3         1993   651003.0      NaN         NaN  \n",
-       "4         1994   650020.0      NaN         NaN  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   DATAFLOW        LAST UPDATE freq   ind_type    indic_is  \\\n",
+      "0  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "1  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "2  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "3  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "4  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "\n",
+      "     unit geo  TIME_PERIOD  OBS_VALUE OBS_FLAG  CONF_STATUS  \n",
+      "0  PC_IND  AL         2018        NaN        u          NaN  \n",
+      "1  PC_IND  AT         2016      37.41      NaN          NaN  \n",
+      "2  PC_IND  AT         2018      42.45      NaN          NaN  \n",
+      "3  PC_IND  AT         2021      39.62      NaN          NaN  \n",
+      "4  PC_IND  AT         2023      40.34      NaN          NaN  \n"
+     ]
     }
    ],
    "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# columns to use: “accomunit,unit,nace_r2,geo” and “2016 “\n",
-    "columns = [\n",
-    "    'accomunit',\n",
-    "    'unit',\n",
-    "    'nace_r2',\n",
-    "    'geo',\n",
-    "    'TIME_PERIOD',\n",
-    "    'OBS_VALUE'\n",
-    "]\n",
-    "# Filter the DataFrame to only include the specified columns\n",
-    "df = df[columns]\n"
+    "#check the data\n",
+    "print(geo_device.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['DATAFLOW', 'LAST UPDATE', 'freq', 'accomunit', 'unit', 'nace_r2',\n",
+      "       'geo', 'TIME_PERIOD', 'OBS_VALUE', 'OBS_FLAG', 'CONF_STATUS'],\n",
+      "      dtype='object')\n",
+      "Index(['DATAFLOW', 'LAST UPDATE', 'freq', 'ind_type', 'indic_is', 'unit',\n",
+      "       'geo', 'TIME_PERIOD', 'OBS_VALUE', 'OBS_FLAG', 'CONF_STATUS'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "#rows to use: “accomunit” is “BEDPL”, “unit” is “NR”, “nace_r2” is “I551”, “TIME_PERDIO” is “2016”\n",
-    "df = df[\n",
-    "    (df['accomunit'] == 'BEDPL') &\n",
-    "    (df['unit'] == 'NR') &\n",
-    "    (df['nace_r2'] == 'I551') &\n",
-    "    (df['TIME_PERIOD'] == 2016)\n",
-    "]"
+    "print(geo_beds.columns)\n",
+    "print(geo_device.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  geo  TIME_PERIOD accomunit unit nace_r2\n",
+      "0  AT         1990     BEDPL   NR    I551\n",
+      "1  AT         1991     BEDPL   NR    I551\n",
+      "2  AT         1992     BEDPL   NR    I551\n",
+      "3  AT         1993     BEDPL   NR    I551\n",
+      "4  AT         1994     BEDPL   NR    I551\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cols to keep\n",
+    "geo_beds = geo_beds[['geo','TIME_PERIOD','accomunit', 'unit', 'nace_r2']]\n",
+    "print(geo_beds.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATAFLOW</th>\n",
-       "      <th>LAST UPDATE</th>\n",
-       "      <th>freq</th>\n",
-       "      <th>ind_type</th>\n",
-       "      <th>indic_is</th>\n",
-       "      <th>unit</th>\n",
-       "      <th>geo</th>\n",
-       "      <th>TIME_PERIOD</th>\n",
-       "      <th>OBS_VALUE</th>\n",
-       "      <th>OBS_FLAG</th>\n",
-       "      <th>CONF_STATUS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ESTAT:ISOC_CI_DEV_I(1.0)</td>\n",
-       "      <td>17/12/24 11:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>CB_EU_FOR</td>\n",
-       "      <td>I_IUG_DKPC</td>\n",
-       "      <td>PC_IND</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>u</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ESTAT:ISOC_CI_DEV_I(1.0)</td>\n",
-       "      <td>17/12/24 11:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>CB_EU_FOR</td>\n",
-       "      <td>I_IUG_DKPC</td>\n",
-       "      <td>PC_IND</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>37.41</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ESTAT:ISOC_CI_DEV_I(1.0)</td>\n",
-       "      <td>17/12/24 11:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>CB_EU_FOR</td>\n",
-       "      <td>I_IUG_DKPC</td>\n",
-       "      <td>PC_IND</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>42.45</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ESTAT:ISOC_CI_DEV_I(1.0)</td>\n",
-       "      <td>17/12/24 11:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>CB_EU_FOR</td>\n",
-       "      <td>I_IUG_DKPC</td>\n",
-       "      <td>PC_IND</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>39.62</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ESTAT:ISOC_CI_DEV_I(1.0)</td>\n",
-       "      <td>17/12/24 11:00:00</td>\n",
-       "      <td>A</td>\n",
-       "      <td>CB_EU_FOR</td>\n",
-       "      <td>I_IUG_DKPC</td>\n",
-       "      <td>PC_IND</td>\n",
-       "      <td>AT</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>40.34</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                   DATAFLOW        LAST UPDATE freq   ind_type    indic_is  \\\n",
-       "0  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-       "1  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-       "2  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-       "3  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-       "4  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-       "\n",
-       "     unit geo  TIME_PERIOD  OBS_VALUE OBS_FLAG  CONF_STATUS  \n",
-       "0  PC_IND  AL         2018        NaN        u          NaN  \n",
-       "1  PC_IND  AT         2016      37.41      NaN          NaN  \n",
-       "2  PC_IND  AT         2018      42.45      NaN          NaN  \n",
-       "3  PC_IND  AT         2021      39.62      NaN          NaN  \n",
-       "4  PC_IND  AT         2023      40.34      NaN          NaN  "
+       "array([1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,\n",
+       "       2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,\n",
+       "       2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022,\n",
+       "       2023, 2024])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_2.head()"
+    "# geo_beds['geo'].unique()\n",
+    "# geo_beds['nace_r2'].unique()\n",
+    "# geo_beds['accomunit'].unique()\n",
+    "# geo_beds['unit'].unique()\n",
+    "geo_beds['TIME_PERIOD'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ini"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Rows to use: “ind_type” is “IND_TOTAL”, “indic_is” is “I_IUG_TV”, “unit” is “PC_IND”, “TIME_PERIOD” is “2016”\n",
-    "df_2 = df_2[\n",
-    "    (df_2['ind_type'] == 'IND_TOTAL') &\n",
-    "    (df_2['indic_is'] == 'I_IUG_TV') &\n",
-    "    (df_2['unit'] == 'PC_IND') &\n",
-    "    (df_2['TIME_PERIOD'] == 2016)\n",
-    "]"
+    "# Rows to use: You should only use rows where: \n",
+    "# “accomunit” is “BEDPL”, --> bedplaces\n",
+    "# “unit” is “NR”, --> number\n",
+    "# “nace_r2” is “I551”, --> hotels and similar accommodation \n",
+    "# “TIME_PERDIO” is “2016” \n",
+    "\n",
+    "# Output the number of bedplaces in hotels and similar accommodation in 2016\n",
+    "geo_beds_2016 = geo_beds[(geo_beds['accomunit'] == 'BEDPL') & (geo_beds['unit'] == 'NR') & (geo_beds['nace_r2'] == 'I551') & (geo_beds['TIME_PERIOD'] == '2016')]\n",
+    "\n",
+    "print(geo_beds_2016.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   DATAFLOW        LAST UPDATE freq   ind_type    indic_is  \\\n",
+      "0  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "1  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "2  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "3  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "4  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
+      "\n",
+      "     unit geo  TIME_PERIOD  OBS_VALUE OBS_FLAG  CONF_STATUS  \n",
+      "0  PC_IND  AL         2018        NaN        u          NaN  \n",
+      "1  PC_IND  AT         2016      37.41      NaN          NaN  \n",
+      "2  PC_IND  AT         2018      42.45      NaN          NaN  \n",
+      "3  PC_IND  AT         2021      39.62      NaN          NaN  \n",
+      "4  PC_IND  AT         2023      40.34      NaN          NaN  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Remove specific regions from the 'geo' column\n",
-    "regions_to_remove = [\"EA\", \"EU27_2007\", \"EU27_2020\", \"EU28\", \"EA19\"]\n",
-    "df = df[~df['geo'].isin(regions_to_remove)]\n",
-    "df_2 = df_2[~df_2['geo'].isin(regions_to_remove)]"
+    "#check the data\n",
+    "print(geo_device.head())"
    ]
   },
   {
