--- a/app.ipynb
+++ b/app.ipynb
@@ -2,50 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load the dataset\n",
-    "geo_device = pd.read_csv(\"input_data/estat_isoc_ci_dev_i_en.csv\")\n",
-    "geo_beds = pd.read_csv(\"input_data/estat_tour_cap_nat_en.csv\")"
+    "tv_df = pd.read_csv(\"input_data/estat_isoc_ci_dev_i_en.csv\")\n",
+    "beds_df = pd.read_csv(\"input_data/estat_tour_cap_nat_en.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   DATAFLOW        LAST UPDATE freq   ind_type    indic_is  \\\n",
-      "0  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-      "1  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-      "2  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-      "3  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-      "4  ESTAT:ISOC_CI_DEV_I(1.0)  17/12/24 11:00:00    A  CB_EU_FOR  I_IUG_DKPC   \n",
-      "\n",
-      "     unit geo  TIME_PERIOD  OBS_VALUE OBS_FLAG  CONF_STATUS  \n",
-      "0  PC_IND  AL         2018        NaN        u          NaN  \n",
-      "1  PC_IND  AT         2016      37.41      NaN          NaN  \n",
-      "2  PC_IND  AT         2018      42.45      NaN          NaN  \n",
-      "3  PC_IND  AT         2021      39.62      NaN          NaN  \n",
-      "4  PC_IND  AT         2023      40.34      NaN          NaN  \n"
-     ]
-    }
-   ],
-   "source": [
-    "#check the data\n",
-    "print(geo_device.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -62,101 +32,103 @@
     }
    ],
    "source": [
-    "print(geo_beds.columns)\n",
-    "print(geo_device.columns)"
+    "print(beds_df.columns)\n",
+    "print(tv_df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  geo  TIME_PERIOD accomunit unit nace_r2  OBS_VALUE\n",
-      "0  AT         1990     BEDPL   NR    I551   650559.0\n",
-      "1  AT         1991     BEDPL   NR    I551   654127.0\n",
-      "2  AT         1992     BEDPL   NR    I551   653586.0\n",
-      "3  AT         1993     BEDPL   NR    I551   651003.0\n",
-      "4  AT         1994     BEDPL   NR    I551   650020.0\n"
+      "  geo  TIME_PERIOD accomunit unit nace_r2  OBS_VALUE OBS_FLAG\n",
+      "0  AT         1990     BEDPL   NR    I551   650559.0      NaN\n",
+      "1  AT         1991     BEDPL   NR    I551   654127.0      NaN\n",
+      "2  AT         1992     BEDPL   NR    I551   653586.0      NaN\n",
+      "3  AT         1993     BEDPL   NR    I551   651003.0      NaN\n",
+      "4  AT         1994     BEDPL   NR    I551   650020.0      NaN\n"
      ]
     }
    ],
    "source": [
     "# cols to keep\n",
-    "geo_beds = geo_beds[['geo','TIME_PERIOD','accomunit', 'unit', 'nace_r2','OBS_VALUE']]\n",
-    "print(geo_beds.head())"
+    "beds_df = beds_df[['geo','TIME_PERIOD','accomunit', 'unit', 'nace_r2','OBS_VALUE', 'OBS_FLAG']]\n",
+    "print(beds_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nace_r2\n",
-      "I551         6867\n",
-      "I552_I553    4320\n",
-      "I551-I553    4294\n",
-      "I553         4265\n",
-      "I552         4139\n",
+      "OBS_FLAG\n",
+      "e     705\n",
+      "b     447\n",
+      "u     125\n",
+      "be      6\n",
       "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "# print(geo_beds['geo'].value_counts())\n",
-    "print(geo_beds['nace_r2'].value_counts())\n",
-    "# print(geo_beds['accomunit'].value_counts())\n",
-    "# print(geo_beds['unit'].value_counts())\n",
-    "# print(geo_beds['TIME_PERIOD'].value_counts())"
+    "# print(beds_df['geo'].value_counts())\n",
+    "# print(beds_df['nace_r2'].value_counts())\n",
+    "# print(beds_df['accomunit'].value_counts())\n",
+    "# print(beds_df['unit'].value_counts())\n",
+    "# print(beds_df['TIME_PERIOD'].value_counts())\n",
+    "print(beds_df['OBS_FLAG'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "geo            object\n",
-       "TIME_PERIOD     int64\n",
-       "accomunit      object\n",
-       "unit           object\n",
-       "nace_r2        object\n",
+       "geo             object\n",
+       "TIME_PERIOD      int64\n",
+       "accomunit       object\n",
+       "unit            object\n",
+       "nace_r2         object\n",
+       "OBS_VALUE      float64\n",
+       "OBS_FLAG        object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "geo_beds.dtypes"
+    "beds_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    geo  TIME_PERIOD accomunit unit nace_r2  OBS_VALUE\n",
-      "26   AT         2016     BEDPL   NR    I551   601945.0\n",
-      "60   BE         2016     BEDPL   NR    I551   129232.0\n",
-      "94   BG         2016     BEDPL   NR    I551   281869.0\n",
-      "126  CH         2016     BEDPL   NR    I551   271710.0\n",
-      "159  CY         2016     BEDPL   NR    I551    83251.0\n"
+      "    geo  TIME_PERIOD accomunit unit nace_r2  OBS_VALUE OBS_FLAG\n",
+      "26   AT         2016     BEDPL   NR    I551   601945.0      NaN\n",
+      "60   BE         2016     BEDPL   NR    I551   129232.0      NaN\n",
+      "94   BG         2016     BEDPL   NR    I551   281869.0      NaN\n",
+      "126  CH         2016     BEDPL   NR    I551   271710.0      NaN\n",
+      "159  CY         2016     BEDPL   NR    I551    83251.0      NaN\n"
      ]
     }
    ],
@@ -168,13 +140,33 @@
     "# “TIME_PERDIO” is “2016” \n",
     "\n",
     "# Output the number of bedplaces in hotels and similar accommodation in 2016 for each country\n",
-    "geo_beds_2016 = geo_beds[(geo_beds['accomunit'] == 'BEDPL') & (geo_beds['unit'] == 'NR') & (geo_beds['nace_r2'] == 'I551') & (geo_beds['TIME_PERIOD'] == 2016)]\n",
-    "print(geo_beds_2016.head())"
+    "beds_df_2016 = beds_df[(beds_df['accomunit'] == 'BEDPL') & (beds_df['unit'] == 'NR') & (beds_df['nace_r2'] == 'I551') & (beds_df['TIME_PERIOD'] == 2016)]\n",
+    "print(beds_df_2016.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clean up the data\n",
+    "\n",
+    "import numpy as np\n",
+    "# Remove rows where geo is EA, EU27_2007, EU27_2020, EU28\n",
+    "beds_df_2016 = beds_df_2016[~beds_df_2016['geo'].str.contains('EA|EU')]\n",
+    "\n",
+    "# Remove rows where OBS_VALUE is not a number, Replace ':' with NaN and convert to float\n",
+    "beds_df_2016['OBS_VALUE'] = beds_df_2016['OBS_VALUE'].replace(':', np.nan).astype(float)\n",
+    "beds_df_2016 = beds_df_2016.dropna(subset=['OBS_VALUE'])\n",
+    "\n",
+    "# Remove rows where OBS_FLAG contains 'u' or 'bu' as they are not reliable\n",
+    "beds_df_2016 = beds_df_2016[~beds_df_2016['geo'].str.contains('u|bu')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -199,12 +191,12 @@
    ],
    "source": [
     "#check the data\n",
-    "print(geo_device.head())"
+    "print(tv_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -215,28 +207,28 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "geo_device.columns"
+    "tv_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cols to keep\n",
-    "geo_device = geo_device[['geo','ind_type','indic_is', 'unit', 'TIME_PERIOD','OBS_VALUE', 'OBS_FLAG']]"
+    "tv_df = tv_df[['geo','ind_type','indic_is', 'unit', 'TIME_PERIOD','OBS_VALUE', 'OBS_FLAG']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -254,19 +246,19 @@
    ],
    "source": [
     "# rows to use: You should only use rows where:\n",
-    "# · “ind_type” is “IND_TOTAL”\n",
-    "# · “indic_is” is “I_IUG_TV”\n",
+    "# · “ind_type” is “IND_TOTAL” --> individual type such as students, males etc\n",
+    "# · “indic_is” is “I_IUG_TV” --> “indic_is”: individuals who used internet on type of device such as TV, computer, mobile --> Selecting only individuals who used internet on smart TV\n",
     "# · “unit” is “PC_IND”\n",
     "# · “TIME_PERIOD” is “2016”\n",
     "\n",
     "# Output the number of TV sets per 100 inhabitants in 2016 for each country\n",
-    "geo_device_2016 = geo_device[(geo_device['ind_type'] == 'IND_TOTAL') & (geo_device['indic_is'] == 'I_IUG_TV') & (geo_device['unit'] == 'PC_IND') & (geo_device['TIME_PERIOD'] == 2016)]\n",
-    "print(geo_device_2016.head())\n"
+    "tv_df_2016 = tv_df[(tv_df['ind_type'] == 'IND_TOTAL') & (tv_df['indic_is'] == 'I_IUG_TV') & (tv_df['unit'] == 'PC_IND') & (tv_df['TIME_PERIOD'] == 2016)]\n",
+    "print(tv_df_2016.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -277,52 +269,94 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "geo_device_2016['OBS_FLAG'].value_counts()"
+    "tv_df_2016['OBS_FLAG'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CLean up the data\n",
     "import numpy as np\n",
-    "\n",
     "# Special values\n",
     "# ● The value “: ” signifies missing data.\n",
     "# ● Rows where OBS_FLAG contains “u” or “bu” are unreliable and should be considered as missing data.\n",
     "# ● Country codes “EA”, \"EU27_2007\", \"EU27_2020\";, \"EU28\"; should be treated the same as missing data and should be ignored.[2]\n",
     "\n",
     "#Treat the special values as missing data\n",
-    "geo_device_2016 = geo_device_2016[~geo_device_2016['OBS_FLAG'].fillna('').str.contains('u|bu')]\n",
-    "geo_device_2016 = geo_device_2016[~geo_device_2016['geo'].isin(['EA', 'EU27_2007', 'EU27_2020', 'EU28'])]\n",
-    "\n",
-    "# Replace \":\" with NaN in 'OBS_VALUE' and then drop rows with NaN\n",
-    "geo_device_2016['OBS_VALUE'] = geo_device_2016['OBS_VALUE'].replace(':', np.nan).astype(float)\n",
-    "geo_device_2016 = geo_device_2016.dropna(subset=['OBS_VALUE'])"
+    "tv_df_2016 = tv_df_2016[~tv_df_2016['geo'].str.contains('EA|EU')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Doing the same for geo_beds_2016\n",
-    "geo_beds_2016 = geo_beds_2016[~geo_beds_2016['geo'].isin(['EA', 'EU27_2007', 'EU27_2020', 'EU28'])]\n",
-    "geo_beds_2016['OBS_VALUE'] = geo_beds_2016['OBS_VALUE'].replace(':', np.nan).astype(float)\n",
-    "geo_beds_2016 = geo_beds_2016.dropna(subset=['OBS_VALUE'])"
+    "# Replace \":\" with NaN in 'OBS_VALUE' and then drop rows with NaN\n",
+    "# tv_df_2016['OBS_VALUE'] = tv_df_2016['OBS_VALUE'].replace(':', np.nan).astype(float)\n",
+    "# tv_df_2016 = tv_df_2016.dropna(subset=['OBS_VALUE'])\n",
+    "\n",
+    "# Remove rows where OBS_FLAG contains 'u' or 'bu' as they are not reliable: There is \"b\" and i am assuming it is a typo and should be \"bu\", hence removing both\n",
+    "tv_df_2016 = tv_df_2016[~tv_df_2016['OBS_FLAG'].isin(['u', 'bu', 'b'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing geo values in tv_df_2016: ['CH', 'IS', 'LI', 'ME', 'TR']\n",
+      "Empty DataFrame\n",
+      "Columns: [geo, Percentage of individuals]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "#left merge the two dataframes on 'geo'\n",
+    "geo_merged = pd.merge(beds_df_2016, tv_df_2016, on='geo', how='left', suffixes=('_beds', '_device'))\n",
+    "# keep only the columns we need: “Country Code”, “Percentage of individuals” and “Number of Bed-places”.\n",
+    "geo_merged = geo_merged[['geo', 'OBS_VALUE_beds', 'OBS_VALUE_device']]\n",
+    "# Rename the columns to “Country Code”, “Number of Bed-places” and “Percentage of individuals”\n",
+    "geo_merged.columns = ['Country Code', 'Number of Bed-places', 'Percentage of individuals']\n",
+    "\n",
+    "# Find the 'geo' values where 'Percentage of individuals' is missing\n",
+    "geo_missing_tv = geo_merged[geo_merged['Percentage of individuals'].isnull()]['Country Code'].tolist()\n",
+    "\n",
+    "# Print the list of missing 'geo' values\n",
+    "print(f\"Missing geo values in tv_df_2016: {geo_missing_tv}\")\n",
+    "\n",
+    "# Create a dataframe containing the missing 'geo' values and the 'Percentage of individuals' from tv_df_2016\n",
+    "missing_tv_df = tv_df_2016[tv_df_2016['geo'].isin(geo_missing_tv)][['geo', 'OBS_VALUE']].rename(columns={'OBS_VALUE': 'Percentage of individuals'})\n",
+    "print(missing_tv_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For simplicity i will remove rows where tv related data is not available. However, a better solution would be to fill the missing values with previous year data or some other method.\n",
+    "geo_merged = geo_merged.dropna(subset=['Percentage of individuals'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -333,18 +367,13 @@
       "0           AT              601945.0                      14.78\n",
       "1           BE              129232.0                       9.89\n",
       "2           BG              281869.0                       3.71\n",
-      "3           CY               83251.0                       6.41\n",
-      "4           CZ              317756.0                       5.32\n"
+      "3           CH              271710.0                        NaN\n",
+      "4           CY               83251.0                       6.41\n"
      ]
     }
    ],
    "source": [
-    "#left merge the two dataframes on 'geo'\n",
-    "geo_merged = geo_beds_2016.merge(geo_device_2016, on='geo', suffixes=('_beds', '_device'))\n",
-    "# keep only the columns we need: “Country Code”, “Percentage of individuals” and “Number of Bed-places”.\n",
-    "geo_merged = geo_merged[['geo', 'OBS_VALUE_beds', 'OBS_VALUE_device']]\n",
-    "# Rename the columns to “Country Code”, “Number of Bed-places” and “Percentage of individuals”\n",
-    "geo_merged.columns = ['Country Code', 'Number of Bed-places', 'Percentage of individuals']\n",
+    "\n",
     "import os\n",
     "\n",
     "# Create the output directory if it doesn't exist\n",
@@ -352,7 +381,7 @@
     "\tos.makedirs('output_data')\n",
     "\n",
     "# Save the merged dataframe to a CSV file\n",
-    "geo_merged.to_csv('output_data/geo_beds_device.csv', index=False)\n",
+    "geo_merged.to_csv('output_data/geo_beds_tv_df.csv', index=False, mode='w')\n",
     "print(geo_merged.head())"
    ]
   },
